--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>스카이웍스 A안</title>
+    <title>스카이웍스 B안</title>
     <link
       rel="stylesheet"
       as="style"
